# NATS_Compact_GTest

./: CMakeLists.txt  NATS_Compact_GTest  NATS_Compact_GTest.cpp
NATS_Compact_Test/: CMakeLists.txt  NATS_Compact_Test.cpp  NATS_Compact_Test.h
TestMsgCount/: NATS_Compact_Test.cpp  NATS_Compact_Test.h  main  main.cpp
